app/src/main/java/com/example/todoapp/domain/error/EmptyDescriptionTaskError.kt
package com.example.todoapp.domain.error

/**
 * EmptyDescriptionTaskError
 *
 * @author (c) 2021, UVI TECH SAPI De CV, KAVAK
 */
class EmptyDescriptionTaskError: Throwable("Empty description")